fix bug: hidden pfp, tooltip stuck, responsive search bar

--- a/components/sidebar-navbar/sidebar-navbar.css
+++ b/components/sidebar-navbar/sidebar-navbar.css
@@ -100,8 +100,6 @@ hr.h-color {
     margin-left: -250px;
     position: sticky;
     min-height: 100vh;
-    overflow-y: scroll;
-    z-index: 1;
   }
 }
 
